Fri Apr 21 19:32:27 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:

          Added orbsvcs/tests/Bug_2377_Regression/Makefile to
          AC_CONFIG_FILES.

        * orbsvcs/tests/Bug_2377_Regression/Makefile.am:

          New file.

Fri Apr 21 14:07:51 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

	* TAO_IDL/Makefile.am:
	* docs/Makefile.am:
	* docs/tutorials/Makefile.am:
	* docs/tutorials/Quoter/Makefile.am:
	* docs/tutorials/Quoter/AMI/Makefile.am:
	* docs/tutorials/Quoter/Event_Service/Makefile.am:
	* docs/tutorials/Quoter/Naming_Service/Makefile.am:
	* docs/tutorials/Quoter/On_Demand_Activation/Makefile.am:
	* docs/tutorials/Quoter/RT_Event_Service/Makefile.am:
	* docs/tutorials/Quoter/Simple/Makefile.am:
	* docs/tutorials/Quoter/Simple/Client/Makefile.am:
	* docs/tutorials/Quoter/Simple/Impl-Repo/Makefile.am:
	* docs/tutorials/Quoter/Simple/ImprovedServer/Makefile.am:
	* docs/tutorials/Quoter/Simple/Persistent/Makefile.am:
	* docs/tutorials/Quoter/Simple/Server/Makefile.am:
	* docs/tutorials/Quoter/idl/Makefile.am:
	* examples/Makefile.am:
	* examples/AMH/Makefile.am:
	* examples/AMH/Sink_Server/Makefile.am:
	* examples/AMI/Makefile.am:
	* examples/AMI/FL_Callback/Makefile.am:
	* examples/Advanced/Makefile.am:
	* examples/Advanced/ch_3/Makefile.am:
	* examples/Buffered_AMI/Makefile.am:
	* examples/Buffered_Oneways/Makefile.am:
	* examples/CSD_Strategy/Makefile.am:
	* examples/CSD_Strategy/ThreadPool/Makefile.am:
	* examples/CSD_Strategy/ThreadPool2/Makefile.am:
	* examples/CSD_Strategy/ThreadPool3/Makefile.am:
	* examples/CSD_Strategy/ThreadPool4/Makefile.am:
	* examples/CSD_Strategy/ThreadPool5/Makefile.am:
	* examples/CSD_Strategy/ThreadPool6/Makefile.am:
	* examples/Callback_Quoter/Makefile.am:
	* examples/Content_Server/Makefile.am:
	* examples/Content_Server/AMI_Iterator/Makefile.am:
	* examples/Content_Server/AMI_Observer/Makefile.am:
	* examples/Content_Server/SMI_Iterator/Makefile.am: