@@ -10,7 +10,6 @@
 
 SUBDIRS = \
         Anyop \
-        CSD_Strategy \
         Callback \
         Cubit \
         Latency \
@@ -22,3 +21,4 @@ SUBDIRS = \
         Sequence_Latency \
         Throughput
 
+#	CSD_Strategy
