@@ -1,3 +1,11 @@
+Fri Apr 21 20:43:24 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>
+
+        * examples/Makefile.am:
+        * performance-tests/Makefile.am:
+        
+          Remove handful of subdirectories that have not yet been updated
+          to work with autoconf builds.
+
 Fri Apr 21 19:32:27 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>
 
         * configure.ac:
